fix: overflow

--- a/view/src/index.css
+++ b/view/src/index.css
@@ -6,18 +6,16 @@
 @tailwind utilities;
 
 
-*{
+* {
   box-sizing: border-box;
 }
 
+html{
+  overflow-x: hidden !important;
+}
+
 body {
-  overflow-x: hidden;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, sans-serif;
   max-width: 2000px;
   margin: 0 auto;
 }
